"VQT-11 Intialize Java Backend API services for Login AUTH"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=authapi
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/VQT
+spring.datasource.url=jdbc:postgresql://localhost:5432/authapi_db
 spring.datasource.username=andrew
 spring.datasource.password=yourpassword
 spring.datasource.driver-class-name=org.postgresql.Driver
